--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".BottomNavigationActivity"
+            android:name=".SignInLogin.BottomNavigationActivity"
             android:exported="false"
             android:label="@string/title_activity_bottom_navigation">
             <meta-data
