--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -18,10 +17,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".AddProduct"
-            android:exported="false"
-            android:label="@string/title_activity_add_product"
-            android:theme="@style/Theme.MatchaShop.NoActionBar">
+            android:name=".CouponForm"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".AddCoupon"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -30,6 +34,7 @@
         <service
             android:name=".Service.NotificationService"
             android:enabled="true" />
+
         <activity
             android:name=".OrderHistoryActivity"
             android:exported="false">
@@ -80,9 +85,24 @@
         <activity
             android:name=".MainFragments.dashboard.AddProducts.AddProduct"
             android:exported="false"
-            android:theme="@style/Theme.Design.Light.NoActionBar"
-            android:label="@string/title_add_product">
-
+            android:theme="@style/Theme.Design.Light.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainFragments.dashboard.CouponForm.CouponForm"
+            android:exported="false"
+            android:theme="@style/Theme.Design.Light.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainFragments.dashboard.CouponForm.CRUDCoupon"
+            android:exported="false"
+            android:label="@string/title_add_product"
+            android:theme="@style/Theme.Design.Light.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
